[package]
name = "twentyfour-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Allan Zhang <al@ayz.ai>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
twentyfour = { path = "../twentyfour" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
